team page card alignment fix

--- a/common/common.scss
+++ b/common/common.scss
@@ -954,10 +954,4 @@ section.about.description {
       display: inline;
     }
   }
-  @media screen and (min-width: 951px) {
-    &:last-child {
-      margin-right: auto;
-      margin-left: 3.2%;
-    }
-  }
 }
